<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.android.sample4.MainActivity" >

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" 
		    android:layout_margin="10dp"
		    android:orientation="vertical"
    		tools:context=".MainActivity">
			
           <TableRow
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:padding="5dp" >

			    <TextView
			        android:id="@+id/textView1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/title_list_rate_preference" />

			    <TextView
			        android:id="@+id/list_rate_value"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:gravity="right" />
			</TableRow>
			
			<TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp" >

				<TextView
				    android:id="@+id/textView2"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/title_list_bonus_preference"/>

				<TextView
				    android:id="@+id/list_bonus_value"
				    android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:gravity="right"
				    android:text="" />
			</TableRow>
			
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp" >

				<TextView
				    android:id="@+id/textView3"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/title_switch_changePT_preference" />

				<TextView
				    android:id="@+id/switch_changePT_value"
				    android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:gravity="right"
				    android:text="" />
			</TableRow>
			        
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp" >

				<TextView
				    android:id="@+id/textView4"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/title_list_return_preference" />

				<TextView
				    android:id="@+id/list_return_value"
				    android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:gravity="right"
				    android:text="" />
			</TableRow>

         </TableLayout>

    </FrameLayout>
</android.support.v4.widget.DrawerLayout>
 
